relocate website in fr
edited all absolute links to relative links

--- a/en/personnage.html
+++ b/en/personnage.html
@@ -7,14 +7,14 @@
     <meta name="description" content="How to create a character for the Armus?">
     <link rel="stylesheet" href="../style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://apix0n.github.io/Armus/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://apix0n.github.io/Armus/favicon-16x16.png">
-    <link rel="manifest" href="https://apix0n.github.io/Armus/site.webmanifest">
-    <link rel="mask-icon" href="https://apix0n.github.io/Armus/safari-pinned-tab.svg" color="#ff0000">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://apix0n.github.io/Armus/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="manifest" href="../site.webmanifest">
+    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#ff0000">
+    <link rel="apple-touch-icon" sizes="144x144" href="../apple-touch-icon.png">
     <meta name="application-name" content="How to create a character? | Armus EN">
     <meta name="apple-mobile-web-app-title" content="How to create a character? | Armus EN">
-    <meta property="og:image" content="https://apix0n.github.io/Armus/social.png">
+    <meta property="og:image" content="../social.png">
     <meta name="theme-color" content="#06002b">
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
   </head>
@@ -53,7 +53,7 @@
       <p><strong>Examples:</strong> amoga, gokus, perdus</p>
       <ul>
         <li>Download the image of the character <a
-             href="https://raw.githubusercontent.com/Apix0n/Armus/susbranch/files/amogus.jpeg"
+             href="../files/amogus.jpeg"
              target="_blank">amogus</a>,</li>
         <li>Create a new document in your drawing application:<ul>
             <li>Height: 1101px,</li>
@@ -69,7 +69,7 @@
       <p><strong>Example:</strong> cosmonus</p>
       <ul>
         <li>Download the image of the character amogus without background <a
-             href="https://raw.githubusercontent.com/Apix0n/Armus/susbranch/other/creation-personnages/amogus-transparent.png"
+             href="../other/creation-personnages/amogus-transparent.png"
              target="_blank">here</a>,
         </li>
         <li>Create a new document in your drawing application:<ul>
@@ -87,11 +87,11 @@
       <ul>
         <li>Download the images:<ul>
             <li>Of the visor without the character <a
-                 href="https://raw.githubusercontent.com/Apix0n/Armus/susbranch/other/creation-personnages/visiere.png"
+                 href="../other/creation-personnages/visiere.png"
                  target="_blank">here</a>,
             </li>
             <li>And of the background <a
-                 href="https://raw.githubusercontent.com/Apix0n/Armus/susbranch/other/creation-personnages/arriere-plan.jpeg"
+                 href="../other/creation-personnages/arriere-plan.jpeg"
                  target="_blank">here</a>,
             </li>
           </ul>
