--- a/fr/personnage.html
+++ b/fr/personnage.html
@@ -5,16 +5,16 @@
     <title>Comment créer un personnage? | Armus</title>
     <meta charset="utf-8">
     <meta name="description" content="Comment créer un personnage pour l'Armus?">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://apix0n.github.io/Armus/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://apix0n.github.io/Armus/favicon-16x16.png">
-    <link rel="manifest" href="https://apix0n.github.io/Armus/site.webmanifest">
-    <link rel="mask-icon" href="https://apix0n.github.io/Armus/safari-pinned-tab.svg" color="#ff0000">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://apix0n.github.io/Armus/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="manifest" href="../site.webmanifest">
+    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#ff0000">
+    <link rel="apple-touch-icon" sizes="144x144" href="../apple-touch-icon.png">
     <meta name="application-name" content="Comment créer un personnage? | Armus">
     <meta name="apple-mobile-web-app-title" content="Comment créer un personnage? | Armus">
-    <meta property="og:image" content="https://apix0n.github.io/Armus/social.png">
+    <meta property="og:image" content="../social.png">
     <meta name="theme-color" content="#2b0000">
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
   </head>
@@ -53,7 +53,7 @@
       <p><strong>Exemples:</strong> amoga, gokus, perdus</p>
       <ul>
         <li>Téléchargez l'image du personnage <a
-             href="https://raw.githubusercontent.com/Apix0n/Armus/susbranch/files/amogus.jpeg"
+             href="../files/amogus.jpeg"
              target="_blank">amogus</a>,</li>
         <li>Créez un nouveau document dans votre application de dessin:<ul>
             <li>Hauteur: 1101px,</li>
@@ -69,7 +69,7 @@
       <p><strong>Exemple:</strong> cosmonus</p>
       <ul>
         <li>Téléchargez l'image du personnage amogus sans arrière-plan <a
-             href="https://raw.githubusercontent.com/Apix0n/Armus/susbranch/other/creation-personnages/amogus-transparent.png"
+             href="../other/creation-personnages/amogus-transparent.png"
              target="_blank">ici</a>,
         </li>
         <li>Créez un nouveau document dans votre application de dessin:<ul>
@@ -87,11 +87,11 @@
       <ul>
         <li>Téléchargez les images:<ul>
             <li>De la visière sans le personnage <a
-                 href="https://raw.githubusercontent.com/Apix0n/Armus/susbranch/other/creation-personnages/visiere.png"
+                 href="../other/creation-personnages/visiere.png"
                  target="_blank">ici</a>,
             </li>
             <li>Et de l'arrière-plan <a
-                 href="https://raw.githubusercontent.com/Apix0n/Armus/susbranch/other/creation-personnages/arriere-plan.jpeg"
+                 href="../other/creation-personnages/arriere-plan.jpeg"
                  target="_blank">ici</a>,
             </li>
           </ul>
