fixed broken links

--- a/en/index.html
+++ b/en/index.html
@@ -36,7 +36,7 @@
       </a>
     </section>
     <section id="two">
-      <p align=center class="goldlink"><a href="..">🇫🇷 Voir la version originale française du site</a></p>
+      <p align=center class="goldlink"><a href="../fr">🇫🇷 Voir la version originale française du site</a></p>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
       </p>
