--- a/fr/index.html
+++ b/fr/index.html
@@ -36,7 +36,7 @@
       </a>
     </section>
     <section id="two">
-      <p align=center class="goldlink"><a href="en">🇬🇧 See the English version of the website</a></p>
+      <p align=center class="goldlink"><a href="../en">🇬🇧 See the English version of the website</a></p>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
       </p>
