added new charcater + edited language picker

--- a/fr/index.html
+++ b/fr/index.html
@@ -36,7 +36,7 @@
       </a>
     </section>
     <section id="two">
-      <p align=center class="goldlink"><a href="../en">🇬🇧 See the English version of the website</a></p>
+      <div class="langpick goldlink"><span class="used">🇫🇷</span> • <a href="../en" >🇬🇧</a></div>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
       </p>
@@ -85,7 +85,7 @@
         <img src="../other/achievements/certif.png" height=200 title="Projet qualifié d'art par un expert!">
         <img src="../other/achievements/site.png" height=200 title="Ouverture du site!">
         <img src="../other/achievements/50-membres.png" height=200 title="50 membres dans l'armée!">
-        <img src=../other/achievements/10-contributeurs.png height=200 title="10 contributeurs!">
+        <img src=../other/achievements/10-contributeurs.png height=200 title="10 artistes!">
         <img src=../other/achievements/75-membres.png height=200 title="75 membres dans l'armée!">
         <img src="../other/achievements/100-commits.png" height="200" title="100 commits sur GitHub!">
         <img src=../other/achievements/traduction.png height=200 title="Traduction du site">
@@ -93,7 +93,7 @@
       </p>
       <div class="spaceline"></div>
       <h2 id="armée">🔪 L'armée</h2>
-      <p align="center">Nombre total de membres: <b class="ref">109</b></p>
+      <p align="center">Nombre total de membres: <b class="ref">110</b></p>
       <p align="center">Cliquer sur les noms en <b class="ref">or</b> vous enverra
         aux <code>🌟 Remerciements</code>.</p>
       <table class="members-table" align=center>
@@ -517,6 +517,13 @@
               <p><img src=../files/marius.jpeg></p>
             </td>
             <td><a href="../files/marius.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
+            <td><a class=ref href=#remerciements>maya</a></td>
+            <td>
+              <p><img src="../files/maya.jpeg"></p>
+            </td>
+            <td><a href="../files/maya.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td><a class=ref href=#remerciements>michael-jacksus</a></td>
@@ -944,6 +951,7 @@
           <code>voitus <a href="https://github.com/Apix0n/Armus/issues/29" target="_blank">#29</a></code> et
           <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>
         </li>
+        <li><b>Goku</b> pour <code>maya</code></li>
       </ul>
       <p>Légende:</p>
       <ul>
