mise à jour de couleurs et liens

--- a/en/personnage.html
+++ b/en/personnage.html
@@ -54,7 +54,7 @@
       <ul>
         <li>Download the image of the character <a
              href="../files/amogus.jpeg"
-             target="_blank">amogus</a>,</li>
+             download">amogus</a>,</li>
         <li>Create a new document in your drawing application:<ul>
             <li>Height: 1101px,</li>
             <li>Width: 689px,</li>
@@ -70,7 +70,7 @@
       <ul>
         <li>Download the image of the character amogus without background <a
              href="../other/creation-personnages/amogus-transparent.png"
-             target="_blank">here</a>,
+             download>here</a>,
         </li>
         <li>Create a new document in your drawing application:<ul>
             <li>Height: 1101px,</li>
@@ -88,11 +88,11 @@
         <li>Download the images:<ul>
             <li>Of the visor without the character <a
                  href="../other/creation-personnages/visiere.png"
-                 target="_blank">here</a>,
+                 download>here</a>,
             </li>
             <li>And of the background <a
                  href="../other/creation-personnages/arriere-plan.jpeg"
-                 target="_blank">here</a>,
+                 download>here</a>,
             </li>
           </ul>
         </li>
