--- a/fr/personnage.html
+++ b/fr/personnage.html
@@ -54,7 +54,7 @@
       <ul>
         <li>Téléchargez l'image du personnage <a
              href="../files/amogus.jpeg"
-             target="_blank">amogus</a>,</li>
+             download>amogus</a>,</li>
         <li>Créez un nouveau document dans votre application de dessin:<ul>
             <li>Hauteur: 1101px,</li>
             <li>Largeur: 689px,</li>
@@ -70,7 +70,7 @@
       <ul>
         <li>Téléchargez l'image du personnage amogus sans arrière-plan <a
              href="../other/creation-personnages/amogus-transparent.png"
-             target="_blank">ici</a>,
+             download>ici</a>,
         </li>
         <li>Créez un nouveau document dans votre application de dessin:<ul>
             <li>Hauteur: 1101px,</li>
@@ -88,11 +88,11 @@
         <li>Téléchargez les images:<ul>
             <li>De la visière sans le personnage <a
                  href="../other/creation-personnages/visiere.png"
-                 target="_blank">ici</a>,
+                 download>ici</a>,
             </li>
             <li>Et de l'arrière-plan <a
                  href="../other/creation-personnages/arriere-plan.jpeg"
-                 target="_blank">ici</a>,
+                 download>ici</a>,
             </li>
           </ul>
         </li>
