--- a/tr/index.html
+++ b/tr/index.html
@@ -37,7 +37,7 @@
       </a>
     </section>
     <section id="two">
-      <p align=center class="goldlink"><a href="../en">🇬🇧 See the English version of the website</a></p>
+      <div class="langpick goldlink"><a href="../fr">🇫🇷</a> • <a href="../en">🇬🇧</a> • <span class="used">🇹🇷</span></div>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
       </p>
