--- a/en/index.html
+++ b/en/index.html
@@ -94,7 +94,7 @@
       </p>
       <div class="spaceline"></div>
       <h2 id="armée">🔪 The army</h2>
-      <p align="center">Total number of members: <b class=ref>110</b></p>
+      <p align="center">Total number of members: <b class=ref>112</b></p>
       <p align="center">Clicking on the <b class="ref">golden</b> links will send you to
         the <code>🌟 Acknowledgements</code>.</p>
       <table class="members-table" align=center>
@@ -119,6 +119,13 @@
               <p><img src=../files/abigus.jpeg></p>
             </td>
             <td><a href="../files/abigus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
+            <td><a class=ref href=#remerciements>ahmonzbobus</a></td>
+            <td>
+              <p><img src="../files/ahmonzbobus.jpeg"></p>
+            </td>
+            <td><a href="../files/ahmonzbobus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td>airmogus</td>
@@ -591,6 +598,13 @@
             <td><a href="../files/pacmanus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
+            <td><a class=ref href=#remerciements>paintus</a></td>
+            <td>
+              <p><img src="../files/paintus.jpeg"></p>
+            </td>
+            <td><a href="../files/paintus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
             <td><a class=ref href=#remerciements>panterus</a></td>
             <td>
               <p><img src=../files/panterus.jpeg></p>
@@ -900,8 +914,9 @@
       <p align="center"><a href="personnage.html">The guide: How to create a character?</a></p>
       <div class="spaceline"></div>
       <h2 id="remerciements">🌟 Acknowledgements</h2>
-      <p>Thanks to:</p>
+      <p>Thanks to the <b class="ref">19</b> artists:</p>
       <ul class="remerciements">
+        <li><b class="ref2">💎 Apix</b> (me) for all the characters with the white name,</li>
         <li><b class="ref2">💎 Chus</b> who, in addition to being the person I had the idea with, created
           <code>amoga</code>,
           <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>,
@@ -953,6 +968,8 @@
           <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>
         </li>
         <li><b>Goku</b> for <code>maya</code></li>
+        <li><b>Abat</b> for <code>paintus</code></li>
+        <li><b>Ducky duck</b> for <code>ahmonzbobus</code></li>
       </ul>
       <p>Caption:</p>
       <ul>
