--- a/fr/index.html
+++ b/fr/index.html
@@ -93,7 +93,7 @@
       </p>
       <div class="spaceline"></div>
       <h2 id="armée">🔪 L'armée</h2>
-      <p align="center">Nombre total de membres: <b class="ref">110</b></p>
+      <p align="center">Nombre total de membres: <b class="ref">112</b></p>
       <p align="center">Cliquer sur les noms en <b class="ref">or</b> vous enverra
         aux <code>🌟 Remerciements</code>.</p>
       <table class="members-table" align=center>
@@ -118,6 +118,13 @@
               <p><img src=../files/abigus.jpeg></p>
             </td>
             <td><a href="../files/abigus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
+            <td><a class=ref href=#remerciements>ahmonzbobus</a></td>
+            <td>
+              <p><img src="../files/ahmonzbobus.jpeg"></p>
+            </td>
+            <td><a href="../files/ahmonzbobus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td>airmogus</td>
@@ -590,6 +597,13 @@
             <td><a href="../files/pacmanus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
+            <td><a class=ref href=#remerciements>paintus</a></td>
+            <td>
+              <p><img src="../files/paintus.jpeg"></p>
+            </td>
+            <td><a href="../files/paintus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
             <td><a class=ref href=#remerciements>panterus</a></td>
             <td>
               <p><img src=../files/panterus.jpeg></p>
@@ -899,8 +913,9 @@
       <p align="center"><a href="personnage.html">Le guide: Comment créer un personnage?</a></p>
       <div class="spaceline"></div>
       <h2 id="remerciements">🌟 Remerciements</h2>
-      <p>Merci à:</p>
+      <p>Merci aux <b class="ref">19</b> artistes:</p>
       <ul class="remerciements">
+        <li><b class="ref2">💎 Apix</b> (moi) pour tous les personnages avec le nom blanc,</li>
         <li><b class="ref2">💎 Chus</b> qui, en plus d’être la personne avec laquelle j’ai eu l’idée, a créé
           <code>amoga</code>,
           <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>,
@@ -952,6 +967,8 @@
           <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>
         </li>
         <li><b>Goku</b> pour <code>maya</code></li>
+        <li><b>Abat</b> pour <code>paintus</code></li>
+        <li><b>Ducky duck</b> pour <code>ahmonzbobus</code></li>
       </ul>
       <p>Légende:</p>
       <ul>
