--- a/tr/index.html
+++ b/tr/index.html
@@ -13,8 +13,8 @@
     <link rel="manifest" href="../site.webmanifest">
     <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#ff0000">
     <link rel="apple-touch-icon" sizes="144x144" href="../apple-touch-icon.png">
-    <meta name="application-name" content="Armus">
-    <meta name="apple-mobile-web-app-title" content="Armus">
+    <meta name="application-name" content="Armus TR">
+    <meta name="apple-mobile-web-app-title" content="Armus TR">
     <meta property="og:image" content="../social.png">
     <meta name="theme-color" content="#2b0000">
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
@@ -73,7 +73,7 @@
       </table>
       <div class="spaceline"></div>
       <h2 id="informations">📝 Bilgiler</h2>
-      <h4 align="center">Armus, tüm özel amoguları bir orduda organize etmek için arkadaşlarla oluşturulan GitHub tarafından barındırılan bir projedir.</h4>
+      <h4 align="center">Armus, tüm özel amogusları bir orduda organize etmek için arkadaşlarla oluşturulan GitHub tarafından barındırılan bir projedir.</h4>
       <p align="center"><a href="https://github.com/Apix0n/Armus"><img
                src="https://img.shields.io/badge/GitHub&apos;da%20gör-ff0000?style=for-the-badge&logo=github&labelColor=f2f2f2&logoColor=000000"></a>
       </p>
@@ -81,27 +81,26 @@
       <h2 id="médailles">🏅 Madalyalar</h2>
       <p align="center">
         <img src="../other/achievements/creation.png" height=200 title="Projenin oluşturulması">
-        <img src="../other/achievements/25-membres.png" height=200 title="Orduda 25 karakterler!">
+        <img src="../other/achievements/25-membres.png" height=200 title="Orduda 25 üye!">
         <img src="../other/achievements/certif.png" height=200 title="Bir uzman tarafından sanat adı verildi!">
         <img src="../other/achievements/site.png" height=200 title="Sitenin açılması!">
-        <img src="../other/achievements/50-membres.png" height=200 title="Orduda 50 karakterler!">
+        <img src="../other/achievements/50-membres.png" height=200 title="Orduda 50 üye!">
         <img src=../other/achievements/10-contributeurs.png height=200 title="10 sanatçılar!">
-        <img src=../other/achievements/75-membres.png height=200 title="75 membres dans l'armée!">
+        <img src=../other/achievements/75-membres.png height=200 title="Orduda 75 üye!">
         <img src="../other/achievements/100-commits.png" height="200" title="GitHub'da 100 commits!">
-        <img src=../other/achievements/traduction.png height=200 title="Traduction du site">
-        <img src=../other/achievements/100-membres.png height=200 title="100 membres dans l'armée! 🎊">
+        <img src=../other/achievements/traduction.png height=200 title="Web sitenin çevirisi">
+        <img src=../other/achievements/100-membres.png height=200 title="Orduda 100 üye! 🎊">
       </p>
       <div class="spaceline"></div>
       <h2 id="armée">🔪 Ordu</h2>
-      <p align="center">Nombre total de membres: <b class="ref">110</b></p>
-      <p align="center">Cliquer sur les noms en <b class="ref">or</b> vous enverra
-        aux <code>🌟 Remerciements</code>.</p>
+      <p align="center">Toplam üye sayısı: <b class="ref">112</b></p>
+      <p align="center"><b class="ref">Altın</b> isimlere tıklamak sizi <code>⭐ Teşekkürlere</code> götürecektir.</p>
       <table class="members-table" align=center>
         <thead>
           <tr>
-            <th>Nom</th>
-            <th>Image</th>
-            <th>Lien</th>
+            <th>Ad</th>
+            <th>Resim</th>
+            <th>Bağlantı</th>
           </tr>
         </thead>
         <tbody>
@@ -118,6 +117,13 @@
               <p><img src=../files/abigus.jpeg></p>
             </td>
             <td><a href="../files/abigus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
+            <td><a class=ref href=#remerciements>ahmonzbobus</a></td>
+            <td>
+              <p><img src="../files/ahmonzbobus.jpeg"></p>
+            </td>
+            <td><a href="../files/ahmonzbobus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
             <td>airmogus</td>
@@ -590,6 +596,13 @@
             <td><a href="../files/pacmanus.jpeg"><span class="material-icons-round">link</span></a></td>
           </tr>
           <tr>
+            <td><a class=ref href=#remerciements>paintus</a></td>
+            <td>
+              <p><img src="../files/paintus.jpeg"></p>
+            </td>
+            <td><a href="../files/paintus.jpeg"><span class="material-icons-round">link</span></a></td>
+          </tr>
+          <tr>
             <td><a class=ref href=#remerciements>panterus</a></td>
             <td>
               <p><img src=../files/panterus.jpeg></p>
@@ -899,8 +912,9 @@
       <p align="center"><a href="personnage.html">Le guide: Comment créer un personnage?</a></p>
       <div class="spaceline"></div>
       <h2 id="remerciements">🌟 Remerciements</h2>
-      <p>Merci à:</p>
+      <p>Merci aux artistes:</p>
       <ul class="remerciements">
+        <li><b class="ref2">💎 Apix</b> (moi) pour tous les personnages avec le nom blanc,</li>
         <li><b class="ref2">💎 Chus</b> qui, en plus d’être la personne avec laquelle j’ai eu l’idée, a créé
           <code>amoga</code>,
           <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>,
@@ -952,6 +966,8 @@
           <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>
         </li>
         <li><b>Goku</b> pour <code>maya</code></li>
+        <li><b>Abat</b> pour <code>paintus</code></li>
+        <li><b>Ducky duck</b> pour <code>ahmonzbobus</code></li>
       </ul>
       <p>Légende:</p>
       <ul>
