Ajout du Turc dans les langues 🎊

--- a/en/index.html
+++ b/en/index.html
@@ -30,13 +30,13 @@
     <section id="one" class="color-en">
       <h1>Armus <img class="svgicon" src="../armus-icon.svg"></h1>
       <h2 style="margin-bottom: 5px">🎊 100 MEMBERS 🎊</h2>
-      <h2>In English</h2>
+      <h2>English</h2>
       <a style="padding-top: 20px;" href="#two">
         <span class="material-icons-round scroll">keyboard_arrow_down</span>
       </a>
     </section>
     <section id="two">
-      <div class="langpick goldlink"><a href="../fr">🇫🇷</a> • <span class="used">🇬🇧</span></div>
+      <div class="langpick goldlink"><a href="../fr">🇫🇷</a> • <span class="used">🇬🇧</span> • <a href="../tr">🇹🇷</a></div>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
       </p>
