--- a/fr/index.html
+++ b/fr/index.html
@@ -36,7 +36,7 @@
       </a>
     </section>
     <section id="two">
-      <div class="langpick goldlink"><span class="used">🇫🇷</span> • <a href="../en" >🇬🇧</a></div>
+      <div class="langpick goldlink"><span class="used">🇫🇷</span> • <a href="../en" >🇬🇧</a> • <a href="../tr">🇹🇷</a></div>
       <p align=center class="line-image">
         <img src="../other/Armus-line.jpg">
       </p>
