--- a/tr/index.html
+++ b/tr/index.html
@@ -30,8 +30,8 @@
     </script>
     <section id="one" class="color-tr">
       <h1>Armus <img class="svgicon" src="../armus-icon.svg"></h1>
-      <h2 style="margin-bottom: 5px">🎊 100 ÜYELER 🎊</h2>
-      <h2>Türkçede</h2>
+      <h2 style="margin-bottom: 5px">🎊 100 ÜYE 🎊</h2>
+      <h2>Türkçe</h2>
       <a style="padding-top: 20px;" href="#two">
         <span class="material-icons-round scroll">keyboard_arrow_down</span>
       </a>
@@ -94,13 +94,13 @@
       <div class="spaceline"></div>
       <h2 id="armée">🔪 Ordu</h2>
       <p align="center">Toplam üye sayısı: <b class="ref">112</b></p>
-      <p align="center"><b class="ref">Altın</b> isimlere tıklamak sizi <code>⭐ Teşekkürlere</code> götürecektir.</p>
+      <p align="center"><b class="ref">Altın</b> olan isimlere tıklayarak sizi <code>⭐ Teşekkürler</code> bölümüne yönledirileceksiniz.</p>
       <table class="members-table" align=center>
         <thead>
           <tr>
             <th>Ad</th>
             <th>Resim</th>
-            <th>Bağlantı</th>
+            <th title="Bağlantı" class="dotlined">Bağ.</th>
           </tr>
         </thead>
         <tbody>
@@ -893,29 +893,27 @@
         </tbody>
       </table>
       <div class="spaceline"></div>
-      <h2 id="problème">❓ Un problème ?</h2>
-      <p>Si:</p>
+      <h2 id="problème">❓ Bir sorun ?</h2>
+      <p>Eğer:</p>
       <ul>
-        <li> vous voulez améliorer le projet, </li>
-        <li> vous voulez demander le changement de nom d'un personnage, </li>
-        <li> vous avez trouvé un personnage deux fois, </li>
-        <li> vous avez une question, </li>
-        <li> vous voulez supprimer un personnage, </li>
+        <li> projeyi geliştirmek istiyorsanız, </li>
+        <li> bir karakterin adını değişikliği talep etmek isterseniz, </li>
+        <li> iki kez bir karakter bulduysanız, </li>
+        <li> bir sorunuz varsa, </li>
+        <li> bir karakteri silmek istiyorsanız, </li>
       </ul>
-      <p>Merci de créer une issue <a href="https://github.com/Apix0n/Armus/issues/new/choose" target="_blank">ici</a> en
-        sélectionnant le bon modèle.</p>
+      <p>Lütfen doğru modeli seçerek <a href="https://github.com/Apix0n/Armus/issues/new/choose" target="_blank">burada</a> bir sorun oluşturun.</p>
       <div class="spaceline"></div>
-      <h2 id="personnage">🎨 Créer un personnage</h2>
-      <p>Afin de créer un personnage sans faire d'erreurs, pour avoir les fichiers nécessaires et l'envoyer dans
-        l'Armus,
-        cliquez sur le lien ci-dessous pour ouvrir le guide.</p>
-      <p align="center"><a href="personnage.html">Le guide: Comment créer un personnage?</a></p>
+      <h2 id="personnage">🎨 Bir karakter yarat</h2>
+      <p>Hata yapmadan karakter oluşturmak, gerekli dosyalara indirlemek ve Armus'a göndermek için aşağıdaki bağlantı tıklayarak
+      rehberi açabilirsiniz.</p>
+      <p align="center"><a href="../en/personnage.html">Rehber: bir karakter nasıl oluşturulur?</a> (İngilizce)</p>
       <div class="spaceline"></div>
-      <h2 id="remerciements">🌟 Remerciements</h2>
-      <p>Merci aux artistes:</p>
+      <h2 id="remerciements">🌟 Teșekkürler</h2>
+      <p>Sanatçılara teşekkürler:</p>
       <ul class="remerciements">
-        <li><b class="ref2">💎 Apix</b> (moi) pour tous les personnages avec le nom blanc,</li>
-        <li><b class="ref2">💎 Chus</b> qui, en plus d’être la personne avec laquelle j’ai eu l’idée, a créé
+        <li><b class="ref2">💎 Apix</b> (ben) beyaz adını olan tüm karakterler için,</li>
+        <li><b class="ref2">💎 Chus</b>, fikre sahip olduğum kiși olmanın yanı sıra ve
           <code>amoga</code>,
           <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>,
           <code>cuistus</code>,
@@ -923,36 +921,36 @@
           <code>impostor</code>,
           <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>,
           <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>,
-          <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> et
-          <code>vampirus</code>
+          <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> ve
+          <code>vampirus</code> yarattıǧını için.
         </li>
-        <li><b class="ref">👑 XNinja</b> pour <code>applus</code>, <code>asus</code>, <code>diamonda</code>,
+        <li><b class="ref">👑 XNinja</b> <code>applus</code>, <code>asus</code>, <code>diamonda</code>,
           <code>gameus</code>, <code>marius</code>, <code>pacmanus</code>
           <code>pokebollus</code>,
-          <code>stickmus</code>, <code>uranus</code> et
-          <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>
+          <code>stickmus</code>, <code>uranus</code> ve
+          <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code> için,
         </li>
-        <li><b>Ilian</b> pour <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>naturus</code>,
-          <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> et <code>vegetus</code>
+        <li><b>Ilian</b> <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>naturus</code>,
+          <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> ve <code>vegetus</code> için,
         </li>
-        <li><b>Jujudubat7</b> pour <code>chaplinus</code></li>
-        <li><b>EVIL UO</b> pour <code>luffus</code> et <code>nymarus</code></li>
-        <li><b>Camicase</b> pour <code>helicoptus</code> et <code>sleepus</code></li>
-        <li><b class="ref">👑 Aliko</b> pour <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>,
+        <li><b>Jujudubat7</b> <code>chaplinus</code> için,</li>
+        <li><b>EVIL UO</b> <code>luffus</code> ve <code>nymarus</code> için,</li>
+        <li><b>Camicase</b> <code>helicoptus</code> ve <code>sleepus</code> için,</li>
+        <li><b class="ref">👑 Aliko</b> <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>,
           <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>icecreamus</code>, <code>intellus</code>,
           <code>japnessa</code>,
           <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>rockus</code>,
           <code>tchoupius</code>,
-          <code>tornadus</code>, <code>xdsus</code> et <code>yoyosus</code>
+          <code>tornadus</code>, <code>xdsus</code> ve <code>yoyosus</code> için,
         </li>
-        <li><b>Lili</b> pour <code>amosus</code>, <code>bakacutea</code> et <code>turkus</code></li>
-        <li><b>Petiteprincesse</b> pour <code>pikachus</code> et <code>rainbowus</code></li>
-        <li><b>Apyzzelos</b> pour <code>hamburgus</code></li>
-        <li><b>Samilogosy</b> pour <code>capturus</code> et <code>shrekus</code></li>
-        <li><b>K.Y</b> pour <code>theamosus78</code></li>
-        <li><b>ID_CLAS</b> pour <code>arabus</code></li>
-        <li><b>ceriban176</b> pour <code>roitus</code></li>
-        <li><b class="ref">👑 Nissou</b> pour
+        <li><b>Lili</b> <code>amosus</code>, <code>bakacutea</code> ve <code>turkus</code> için,</li>
+        <li><b>Petiteprincesse</b> <code>pikachus</code> ve <code>rainbowus</code> için,</li>
+        <li><b>Apyzzelos</b> <code>hamburgus</code> için,</li>
+        <li><b>Samilogosy</b> <code>capturus</code> ve <code>shrekus</code> için,</li>
+        <li><b>K.Y</b> <code>theamosus78</code> için,</li>
+        <li><b>ID_CLAS</b> <code>arabus</code> için,</li>
+        <li><b>ceriban176</b> <code>roitus</code> için,</li>
+        <li><b class="ref">👑 Nissou</b> 
           <code>abatus <a href=https://github.com/Apix0n/Armus/issues/17 target="_blank">#17</a></code>,
           <code>angelus <a href=https://github.com/Apix0n/Armus/issues/24 target="_blank">#24</a></code>,
           <code>bitmojus <a href=https://github.com/Apix0n/Armus/issues/28 target="_blank">#28</a></code>,
@@ -962,38 +960,39 @@
           <code>panterus <a href=https://github.com/Apix0n/Armus/issues/18 target="_blank">#18</a></code>,
           <code>papillus <a href=https://github.com/Apix0n/Armus/issues/25 target="_blank">#25</a></code>,
           <code>superherus <a href=https://github.com/Apix0n/Armus/issues/26 target="_blank">#26</a></code>,
-          <code>voitus <a href="https://github.com/Apix0n/Armus/issues/29" target="_blank">#29</a></code> et
-          <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>
+          <code>voitus <a href="https://github.com/Apix0n/Armus/issues/29" target="_blank">#29</a></code> ve
+          <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code> için,
         </li>
-        <li><b>Goku</b> pour <code>maya</code></li>
-        <li><b>Abat</b> pour <code>paintus</code></li>
-        <li><b>Ducky duck</b> pour <code>ahmonzbobus</code></li>
+        <li><b>Goku</b> <code>maya</code> için,</li>
+        <li><b>Abat</b> <code>paintus</code> için,</li>
+        <li><b>Ducky duck</b> <code>ahmonzbobus</code> için,</li>
       </ul>
-      <p>Légende:</p>
+      <p>Açıklaması:</p>
       <ul>
-        <li><b class="ref">👑 Artiste</b>: Plus de 10 personnages</li>
-        <li><b class="ref2">💎 Artiste</b>: Plus de 20 personnages</li>
-        <li><b class="ref3">🌹 Artiste</b>: Plus de 30 personnages</li>
+        <li><b class="ref">👑 Sanatçı</b>: 10 karakterden fazla</li>
+        <li><b class="ref2">💎 Sanatçı</b>: 20 karakterden fazla</li>
+        <li><b class="ref3">🌹 Sanatçı</b>: 30 karakterden fazla</li>
       </ul>
-      <p>Traduction:</p>
+      <p>Çeviri:</p>
       <ul>
-        <li>🇫🇷 <b>Français</b>: Apix</li>
-        <li>🇬🇧 <b>Anglais</b>: Apix</li>
+        <li>🇫🇷 <b>Fransızca</b>: Apix</li>
+        <li>🇬🇧 <b>İngilizce</b>: Apix</li>
+        <li>🇹🇷 <b>Türkçe</b>: Apix</li>
       </ul>
       <div class="spaceline"></div>
-      <h2 id="projets">💿 Projets utilisés:</h2>
+      <h2 id="projets">💿 Kullanılan projeler:</h2>
       <ul>
-        <li>Police: <a href="https://fonts.google.com/specimen/Montserrat">Montserrat</a></li>
-        <li>Icônes: <a href="https://fonts.google.com/icons">Material Icons</a></li>
-        <li>Emojis: <a href="https://twemoji.twitter.com/">Twemoji</a></li>
-        <li>Hébergement: <a href="https://pages.github.com/">Github Pages</a></li>
+        <li>Yazı tipi: <a href="https://fonts.google.com/specimen/Montserrat">Montserrat</a></li>
+        <li>Simgeler: <a href="https://fonts.google.com/icons">Material Icons</a></li>
+        <li>Emojiler: <a href="https://twemoji.twitter.com/">Twemoji</a></li>
+        <li>Barındırlama: <a href="https://pages.github.com/">Github Pages</a></li>
       </ul>
     </section>
 
     <section id="three">
       <div class="navbar">
         <ul>
-          <li><a href="https://github.com/Apix0n" target="_blank">Créé par Apix avec ❤</a></li>
+          <li><a href="https://github.com/Apix0n" target="_blank">Apix tarafından ❤️ ile oluşturuldu</a></li>
         </ul>
       </div>
     </section>
