Ajout du turc dans les remerciemens

--- a/en/index.html
+++ b/en/index.html
@@ -981,6 +981,7 @@
       <ul>
         <li>🇫🇷 <b>French</b>: Apix</li>
         <li>🇬🇧 <b>English</b>: Apix</li>
+        <li>🇹🇷 <b>Turkish</b>: Apix</li>
       </ul>
       <div class="spaceline"></div>
       <h2 id="projets">💿 Used projects:</h2>
