--- a/fr/index.html
+++ b/fr/index.html
@@ -980,6 +980,7 @@
       <ul>
         <li>🇫🇷 <b>Français</b>: Apix</li>
         <li>🇬🇧 <b>Anglais</b>: Apix</li>
+        <li>🇹🇷 <b>Turc</b>: Apix</li>
       </ul>
       <div class="spaceline"></div>
       <h2 id="projets">💿 Projets utilisés:</h2>
